cleaned up references, put the correct thesis layout

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -367,7 +367,7 @@ Indeed, one can define a winding number of a trajectory in the two-dimensional  
 where the integral is taken over the time interval, $t_0$, during which the magnetic field is ramped up and down twice and the system returns to its initial state.
 In the two-state switching regime, $Q  = 0$, whereas for the four-state switching, $Q = 1$.
 This means that as long as the two extremal regimes are present in the material (Fig~\ref{fig:GdMn2O5_theory} (d,f)), there will always exist a boundary region near the magic angle (Fig~\ref{fig:GdMn2O5_theory}(e)), interpolating between the two, and leading to the circular four-state hysteresis.
-While the values of the model parameters decide the exact position and width of this topologically nontrivial region, we found that it is present for a surprisingly wide range of parameters, as shown in Fig.~\ref{fig:GdMn2O5_windingvsmodelparam} and will be discussed further down.
+While the values of the model parameters decide the exact position and width of this topologically nontrivial region, we found that it is present for a surprisingly wide range of parameters, as shown in Fig.~\ref{fig:GdMn2O5_windingvsparam} and will be discussed further down.
 
 To analyze further why the system follows the unidirectional trajectory in Fig~\ref{fig:GdMn2O5_theory}(e) at $\phi_{\rm H}^\ast=10^\circ$, we performed nudged elastic band calculations of the barriers separating the different states, as shown in Fig~\ref{fig:GdMn2O5_neb}(a).
 %
@@ -413,12 +413,12 @@ A small variation to $K_L$, the strength of the Mn anisotropy, on the other hand
 This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy.
 \begin{figure}[h!]
 	\IncludeGraphics[width=0.90\linewidth]{winding_modelparam.png}
-	\caption{\label{fig:GdMn2O5_windingvsmodelparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the text of this section, and used for Fig.~\ref{fig:theory1} of the main text. All parameters are reported in units of meV. The blue regions signify the low angle switching regime, while the red denotes the high angle switching regime. The white boundary region is where the double loop switching regime occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
+	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the text of this section, and used for Fig.~\ref{fig:GdMn2O5_theory} of the main text. All parameters are reported in units of meV. The blue regions signify the low angle switching regime, while the red denotes the high angle switching regime. The white boundary region is where the double loop switching regime occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
 \end{figure}
 
 \section{Simplified Model}
 Having modelled the topologically protected switching in  GdMn$_2$O$_5$ with all its complexity, one may wonder what the minimal requirements are to have a similar behavior where the spins rotate 360$^\circ$ while the applied field only oscillates along a single axis.
-It is clear from the spin configurations in Fig.~\ref{fig:theory1} that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely toggles around its starting position. Gd moments mostly follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to explain the observed behavior using only a single Mn chain with Gd spins, coupled to it via $v_1$. 
+It is clear from the spin configurations in Fig.~\ref{fig:GdMn2O5_spin_configs} that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely toggles around its starting position. Gd moments mostly follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to explain the observed behavior using only a single Mn chain with Gd spins, coupled to it via $v_1$. 
 In the particular case where the magic angle is along $\phi_H = +10^\circ$, we keep $L_1$, $S_2$, $S_3$, $
 S_6$ and $S_7$ as the variables in the model. We also neglect the easy axis anisotropy of Gd spins.
 This leaves us with the following Hamiltonian, combining two parts, one with the dipolar terms $H_{dip}$ and another with all the other terms $H'$:
