--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -62,7 +62,7 @@ In a lot of the work presented in this Thesis we construct simplified model Hami
 Not only does this make the problem more easily solvable, the reduced complexity often also leads to an increased understanding of the effects at play.
 For topics that involve the electronic structure, such as the large Rashba-splitting of energy bands discussed in Chapter \ref{ch:Rashba}, a tight-binding model is often the most appropriate tool.
 % or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, .
-These models have appeared in various forms throughout history, originally proposed by Bloch \cite{Bloch1929l}, and sometimes also referred to as the {\it linear combination of atomic orbitals} method \cite{Slater1954}.
+These models have appeared in various forms throughout history, originally proposed by Bloch \cite{Bloch1929}, and sometimes also referred to as the {\it linear combination of atomic orbitals} method \cite{Slater1954}.
 This last description hints at how they are constructed.
 First, a set of real space orbitals are defined inside the unit cell which are repeated throughout the system to construct the full basis.
 The elements of the Hamiltonian are then constructed by considering the overlap integrals between the orbitals.
