--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -241,7 +241,7 @@ The final term denotes the Zeeman energy of the Gd ions in the external magnetic
 
 As mentioned above, the low temperature commensurate state breaks both time reversal symmetry, $T: (\bm{L}_1, \bm{L}_2) \rightarrow (-\bm{L}_1, -\bm{L}_2)$, and inversion symmetry $I:(\bm{L}_1, \bm{L}_2) \rightarrow (-\bm{L}_1, \bm{L}_2)$.
 This leads to fourfold degenerate energy surfaces in terms of the angles $\phi_{L_1}$ and $\phi_{L_2}$ as shown for different field strengths at $\phi_{\rm H} = 10^\circ$ in Fig.~\ref{fig:GdMn2O5_heatmap}.
-The ground state at zero external field is one of the minima indicated by the white dots in the top left panel, from which one is selected as the starting point of the simulations.
+The ground state at zero external field is one of the minima indicated by the white dots in the top left panel, whence one is selected as the starting point of the simulations.
 The magnitude of the applied field $|\bm{H}|$ is then gradually increased and decreased while minimizing the energy at each increment in order to track the instantaneous local minimum.
 Since the exerimentally observed behavior occurs at such a low temperature, and is fully determistic, this essentially 0\,K simulation should capture the underlying physics.
 
