--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6070,7 +6070,7 @@ author = {{D. Schofield}, R. F. Brown},
 journal = {Canadian Journal of Physics},
 number = {1953},
 pages = {594--607},
-title = {{An Investigation of Some Barium Titanate Compositions for Transducer Applications}},i
+title = {{An Investigation of Some Barium Titanate Compositions for Transducer Applications}},
 url = {https://doi.org/10.1139/p57-067},
 volume = {35},
 year = {1957}
@@ -6383,4 +6383,3 @@ title = {{A Hitchhiker's Guide to Automatic Differentiation}},
 volume = {72},
 year = {2016}
 }
-
