--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -203,12 +203,12 @@ We utilize both theoretical and computational tools to understand the nature of 
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
-\Include{Introduction}
-\Include{Theory}
+% \Include{Introduction}
+% \Include{Theory}
 \Include{Rashba}
 \Include{GdMn2O5}
-\Include{Cr}
-\Include{Softening}
+% \Include{Cr}
+% \Include{Softening}
 \backmatter
 \bibliography{references}
 \printindex
