--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -206,7 +206,7 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \Include{Introduction}
 % \Include{Theory}
 \Include{Rashba}
-\Include{GdMn2O5}
+% \Include{GdMn2O5}
 % \Include{Cr}
 % \Include{Softening}
 \backmatter
